--- a/time.html
+++ b/time.html
@@ -6,7 +6,7 @@
 <title>Clock Widget</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: "Times New Roman", Times, serif;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
@@ -17,12 +17,8 @@
 
   .clock-widget {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    width: 300px;
-    padding: 20px;
-    background-color: #fff;
-    border: 2px solid #000;
+    width: 220px;
   }
 
   .hour-box,
@@ -32,35 +28,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    border: 1px solid black;
-  }
-
-  .date {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    font-size: 10px;
+    background-color: black;
+    color: white;
+    font-size: 30px;
   }
 </style>
 </head>
 <body>
 <div class="clock-widget">
   <div class="hour-box">
-    <span id="hour"></span>
+    <span id="hour">00</span>
   </div>
   <div class="minute-box">
-    <span id="minute"></span>
+    <span id="minute">00</span>
     <div class="date" id="date"></div>
   </div>
-  <select id="color-dropdown">
-    <option value="black">Black</option>
-    <option value="blue">Blue</option>
-    <option value="yellow">Yellow</option>
-    <option value="red">Red</option>
-    <option value="green">Green</option>
-    <option value="pink">Pink</option>
-  </select>
 </div>
 
 <script>
@@ -79,13 +61,6 @@
     document.getElementById('minute').textContent = minute;
     document.getElementById('date').textContent = date;
   }
-
-  document.getElementById('color-dropdown').addEventListener('change', function() {
-    const color = this.value;
-    document.querySelectorAll('.hour-box span, .minute-box span, .date').forEach(element => {
-      element.style.color = color;
-    });
-  });
 
   updateClock();
   setInterval(updateClock, 1000);
