--- a/time.html
+++ b/time.html
@@ -10,23 +10,19 @@
     justify-content: space-between;
     align-items: center;
     width: 400px;
-    height: 300px; /* Increased height */
-    background-color: black;
+    height: 200px;
     color: white;
-    font-size: 40px; /* Increased font size */
+    font-size: 72px; /* Changed font size */
     font-family: 'Times New Roman', Times, serif;
     position: relative;
   }
   .box {
-    flex: 1;
     height: 100%;
-    width: 100px; /* Reduced width */
-    background-color: black;
+    width: 200px; /* Adjusted width */
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
   }
   .line {
     position: absolute;
@@ -72,15 +68,6 @@
   // Call updateTime initially and every second
   updateTime();
   setInterval(updateTime, 1000);
-
-  // Set initial box colors to black
-  document.getElementById("hourBox").style.backgroundColor = "black";
-  document.getElementById("minuteBox").style.backgroundColor = "black";
-
-  function changeColor(color) {
-    document.getElementById("hourBox").style.backgroundColor = color;
-    document.getElementById("minuteBox").style.backgroundColor = color;
-  }
 </script>
 
 </body>
