--- a/time.html
+++ b/time.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Date and Time Widget</title>
 <style>
+  body {
+    background-color: black;
+  }
   .container {
     display: flex;
     justify-content: space-between;
@@ -47,7 +50,6 @@
     <div class="line"></div>
     <span id="hour"></span>
   </div>
-  <div style="width: 20px;"></div> <!-- Space between boxes -->
   <div class="box" id="minuteBox">
     <div class="line"></div>
     <span id="minute"></span>
