--- a/time.html
+++ b/time.html
@@ -6,7 +6,7 @@
 <title>Date and Time Widget</title>
 <style>
   body {
-    background-color: black;
+    background-color: white; /* Changed background color to white */
   }
   .container {
     display: flex;
@@ -14,18 +14,21 @@
     align-items: center;
     width: 400px;
     height: 200px;
-    color: white;
-    font-size: 72px; /* Changed font size */
+    color: black; /* Changed text color to black */
+    font-size: 72px;
     font-family: 'Times New Roman', Times, serif;
     position: relative;
+    margin: 50px auto; /* Center the widget */
+    border: 2px solid black; /* Added border */
   }
   .box {
     height: 100%;
-    width: 200px; /* Adjusted width */
+    width: 200px;
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: black; /* Set box background color to black */
   }
   .line {
     position: absolute;
