--- a/time.html
+++ b/time.html
@@ -36,24 +36,19 @@
         position: absolute;
         background-color: white;
     }
-    .second-mark {
-        width: 2px;
-        height: 15px;
-    }
-    .minute-mark {
+    .time-mark {
         width: 2px;
         height: 10px;
-    }
-    .hour-mark {
-        width: 4px;
-        height: 20px;
+        top: 0;
+        transform-origin: top center;
     }
     #date {
         position: absolute;
-        bottom: 20px;
         color: white;
         font-size: 16px;
         font-family: Arial, sans-serif;
+        text-align: center;
+        line-height: 1.5;
     }
 </style>
 </head>
@@ -64,129 +59,19 @@
     <div class="hand minute" id="minuteHand"></div>
     <div class="hand second" id="secondHand"></div>
 
-    <!-- Clock markings -->
-    <!-- Hour marks -->
-    <div class="mark hour-mark" style="transform: rotate(30deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(60deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(90deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(120deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(150deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(210deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(240deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(270deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(300deg);"></div>
-    <div class="mark hour-mark" style="transform: rotate(330deg);"></div>
+    <!-- Time markers -->
+    <div class="mark time-mark" style="transform: rotate(30deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(60deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(120deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(150deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(210deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(240deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(270deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(300deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(330deg);"></div>
 
-    <!-- Minute marks -->
-    <div class="mark minute-mark" style="transform: rotate(6deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(12deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(18deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(24deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(36deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(42deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(48deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(54deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(66deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(72deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(78deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(84deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(96deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(102deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(108deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(114deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(126deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(132deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(138deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(144deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(156deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(162deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(168deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(174deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(186deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(192deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(198deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(204deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(216deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(222deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(228deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(234deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(246deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(252deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(258deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(264deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(276deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(282deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(288deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(294deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(306deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(312deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(318deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(324deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(336deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(342deg);"></div>
-    <div class="mark minute-mark" style="transform: rotate(348deg);"></div>
-    
-    <!-- Second marks -->
-    <div class="mark second-mark" style="transform: rotate(6deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(12deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(18deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(24deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(30deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(36deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(42deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(48deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(54deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(60deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(66deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(72deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(78deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(84deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(90deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(96deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(102deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(108deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(114deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(120deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(126deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(132deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(138deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(144deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(150deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(156deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(162deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(168deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(174deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(180deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(186deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(192deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(198deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(204deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(210deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(216deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(222deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(228deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(234deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(240deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(246deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(252deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(258deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(264deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(270deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(276deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(282deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(288deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(294deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(300deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(306deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(312deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(318deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(324deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(330deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(336deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(342deg);"></div>
-    <div class="mark second-mark" style="transform: rotate(348deg);"></div>
-
-    <!-- Date display -->
+    <!-- Full date display -->
     <div id="date"></div>
 </div>
 
