--- a/time.html
+++ b/time.html
@@ -60,16 +60,17 @@
     <div class="hand second" id="secondHand"></div>
 
     <!-- Time markers -->
-    <div class="mark time-mark" style="transform: rotate(30deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(60deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(90deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(120deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(150deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(210deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(240deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(270deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(300deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(330deg);"></div>
+    <!-- Minute marks -->
+    <div class="mark time-mark" style="transform: rotate(30deg) translate(150px) rotate(-30deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(60deg) translate(150px) rotate(-60deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(90deg) translate(150px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(120deg) translate(150px) rotate(-120deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(150deg) translate(150px) rotate(-150deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(210deg) translate(150px) rotate(-210deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(240deg) translate(150px) rotate(-240deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(270deg) translate(150px) rotate(-270deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(300deg) translate(150px) rotate(-300deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(330deg) translate(150px) rotate(-330deg);"></div>
 
     <!-- Full date display -->
     <div id="date"></div>
