--- a/time.html
+++ b/time.html
@@ -37,8 +37,8 @@
         background-color: white;
     }
     .time-mark {
-        width: 2px;
-        height: 10px;
+        width: 4px;
+        height: 20px;
         top: 0;
         transform-origin: top center;
     }
@@ -61,16 +61,33 @@
 
     <!-- Time markers -->
     <!-- Minute marks -->
-    <div class="mark time-mark" style="transform: rotate(30deg) translate(150px) rotate(-30deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(60deg) translate(150px) rotate(-60deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(90deg) translate(150px) rotate(-90deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(120deg) translate(150px) rotate(-120deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(150deg) translate(150px) rotate(-150deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(210deg) translate(150px) rotate(-210deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(240deg) translate(150px) rotate(-240deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(270deg) translate(150px) rotate(-270deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(300deg) translate(150px) rotate(-300deg);"></div>
-    <div class="mark time-mark" style="transform: rotate(330deg) translate(150px) rotate(-330deg);"></div>
+    <!-- Thick minute lines -->
+    <div class="mark time-mark" style="transform: rotate(0deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(30deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(60deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(90deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(120deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(150deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(180deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(210deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(240deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(270deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(300deg) translate(135px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(330deg) translate(135px) rotate(-90deg);"></div>
+
+    <!-- Thin minute lines -->
+    <div class="mark time-mark" style="transform: rotate(15deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(45deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(75deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(105deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(135deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(165deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(195deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(225deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(255deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(285deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(315deg) translate(145px) rotate(-90deg);"></div>
+    <div class="mark time-mark" style="transform: rotate(345deg) translate(145px) rotate(-90deg);"></div>
 
     <!-- Full date display -->
     <div id="date"></div>
